min-cut-algorithm